--- a/2. Reponsive Design with Media Queries/styles.css
+++ b/2. Reponsive Design with Media Queries/styles.css
@@ -18,9 +18,20 @@
 
 /* Todo 2.0: Define  Define and apply CSS styles such that the background of .change-styles changes to
 a different color when the screen is smaller than 500px*/
+
+
 .change-color {
   background-color: red;
 }
+
+@media screen and (min-width: 500px){
+  .change-color{
+    background-color: rgb(153, 0, 255);
+  }
+}
+
+
+
 
 /* Todo 2.1: Define and apply CSS styles such that the layout of .change-layout becomes a column
 when the screen's width is smaller than 500px */
@@ -29,6 +40,15 @@ when the screen's width is smaller than 500px */
   flex-direction: row;
 }
 
+@media screen and (max-width: 500px){
+  .change-layout{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+
+
 /* Todo 2.2: Define the common breakpoints for the following devices - phone, tablet, small screens (laptop), and large screens (desktops).
 For each break point, the background of .common-breakpoints must change. You may not use two rules in one media query i.e. you cannot do "(min-width: 100) and (max-width: 200px)" 
 */
@@ -36,4 +56,42 @@ For each break point, the background of .common-breakpoints must change. You may
   width: 100%;
   height: 300px;
   background-color: blue;
+}
+
+@media screen and (min-width: 600px){
+  .common-breakpoints{
+    background-color: purple;
+  }
+}
+
+@media screen and (min-width: 700px){
+  .common-breakpoints{
+    background-color: rgb(52, 0, 221);
+  }
+}
+
+
+@media screen and (min-width: 800px){
+  .common-breakpoints{
+    background-color: rgb(0, 128, 47);
+  }
+}
+
+
+@media screen and (min-width: 900px){
+  .common-breakpoints {
+    background-color: rgb(221, 15, 0);
+  }
+}
+
+@media screen and (min-width: 1000px){
+  .common-breakpoints {
+    background-color: rgb(217, 221, 0);
+  }
+}
+
+@media screen and (min-width: 1100px){
+  .common-breakpoints {
+    background-color: rgb(221, 0, 74);
+  }
 }
