--- a/3. Basics of Animations and Transitions/styles.css
+++ b/3. Basics of Animations and Transitions/styles.css
@@ -14,6 +14,19 @@
 /* Todo 3.0: Create an animation that increases and decreases the scale of the box  */
 .todo-0-container .box{
     /* Apply animation here */
+    animation: bob 1s ease-out infinite;
+}
+
+@keyframes bob{
+    0%{
+        scale: 100%;
+    }
+    50%{
+        scale: 150%;
+    }
+    100%{
+        scale: 100%;
+    }
 }
 
 /* Todo 3.1: Create an animation that moves the box left and right.
@@ -21,15 +34,53 @@ Start with using "from" and "to". Now use "0%" and "100%" as your key frames.
 Set more key frames between 0% and 100%. */
 .todo-1-container .box{
     /* Apply animation here */
+    animation: jeff 1s linear infinite;
+}
+
+@keyframes jeff{
+    from{
+        transform: translateX(0%);
+       
+    }
+    
+    to{
+        transform: translateX(100%);
+        
+    }
 }
 
 /* Todo 3.2: Try the different timing funcitons such as linear, ease-in, ease-in-out, cubic-bezier, and steps*/
 .todo-2-container .box{
     /* Apply animation here */
+    animation: paul 1s ease-out infinite;
+}
+
+@keyframes paul{
+    from{
+        transform: translateX(0%);
+       
+    }
+    
+    to{
+        transform: translateX(100%);
+        
+    }
 }
 
 /* Todo 3.3: Create a transition that will raise the button up and will make it cast a shadow when you hover over the button */
 /* bonus: apply the transition on the box shadow with different duration and timing function. This should all be in one line*/
 .todo-3-container button{
     /* Apply transition here */
+ 
+   
+    transition: transform 300ms ease-in-out 0s, box-shadow 600ms linear;
 }
+
+.todo-3-container button:hover{
+    /* Apply transition here */
+    animation: earl 1s ease-out infinite;
+    transition: .3s;
+    box-shadow: 10px 5px 5px black;
+}
+
+
